welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: too many arguments for method gauche: ()Unit
gauche(gauche(gauche(gauche()))); 
      ^